# hep_ml

./: .appveyour.yml  .gitignore  .nbrunnerdockerfile  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  LICENSE  README.html  README.md  README.rst  appveyor.yml  builddocs.sh  gb.html  genindex.html  index.html  losses.html  metrics.html  nnet.html  notebooks.html  objects.inv  preprocessing.html  publish.sh  publish_to_pypi.sh  py-modindex.html  pyproject.toml  requirements.txt  requirements_docs.txt  reweight.html  search.html  searchindex.js  setup.py  speedup.html  splot.html  start.html  uboost.html
.github/workflows/: deploy_to_pypi.yml  publish_to_pypi.yml  run_tests.yml
_downloads/: BoostingToUniformity.html
_modules/: index.html
_modules/hep_ml/: gradientboosting.html  losses.html  metrics.html  nnet.html  preprocessing.html  reweight.html  speedup.html  splot.html  uboost.html
_modules/hep_ml/experiments/: speedup.html
_sources/: gb.txt  index.txt  notebooks.txt  speedup.rst.txt  start.txt
_sources/notebooks/: BoostingToUniformity.txt  BoostingToUniformity2.txt  notebooks.txt
_static/: documentation_options.js  my_style.css
data/: readme.md
data_to_download/: RD_distribution.root  dalitzdata.root  jpsiphi-RD-2011.root  readme.md
docs/: Makefile  conf.py  gb.html  gb.rst  genindex.html  index.html  index.rst  losses.html  metrics.html  nnet.html  nnet.rst  notebooks.html  notebooks.rst  objects.inv  preprocessing.html  preprocessing.rst  py-modindex.html  reweight.html  search.html  searchindex.js  speedup.html  speedup.rst  splot.html  uboost.html
docs/_modules/: index.html
docs/_modules/hep_ml/: gradientboosting.html  losses.html  metrics.html  nnet.html  preprocessing.html  reweight.html  speedup.html  splot.html  uboost.html
docs/_sources/: index.rst.txt  losses.rst.txt  reweight.rst.txt  uboost.rst.txt
docs/_static/: basic.css  documentation_options.js
docs/_static/css/: my_style.css
docsrc/: conf.py  gb.rst  index.rst  make.bat  metrics.rst  nnet.rst  notebooks.rst  splot.rst
hep_ml/: __init__.py  commonutils.py  gradientboosting.py  losses.py  metrics.py  metrics_utils.py  nnet.py  preprocessing.py  reweight.py  rootutils.py  speedup.py  splot.py  tree.py  uboost.py
hep_ml/experiments/: README.md  __init__.py  reweight.py  speedup.py
notebooks/: BoostingToUniformity.html  BoostingToUniformity.ipynb  BoostingToUniformity2.html  DemoNeuralNetworks.ipynb  DemoReweighting.ipynb  notebooks.html  sPlot.ipynb
tests/: __init__.py  _metrics_oldimplementation.py  _test_rootutils.py  test_commonutils.py  test_gradientboosting.py  test_losses.py  test_metrics.py  test_nnet.py  test_preprocessing.py  test_reweight.py  test_reweighter.py  test_speedup.py  test_splot.py  test_uboost.py
